<resources>
    <string name="app_name">Arduino RGB</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="labelRed">Red</string>
    <string name="labelGreen">Green</string>
    <string name="labelBlue">Blue</string>
    <string name="pref_title_MAC_Arduino">MAC Arduino</string>
    <string name="pref_title_mac">MAC Address</string>
    <string name="pref_title_features">Features</string>
    <string name="pref_enable_hidden_features">Enable features</string>
    <string name="pref_sw_featuren_off">Beta features are hidden.</string>
    <string name="pref_sw_features_on">Beta features are available, but can cause instability.</string>
    <string name="pref_sw_vibration_off">No haptic feedback</string>
    <string name="pref_sw_vibration_on">Enables haptic feedback</string>
    <string name="pref_enable_vibration">Haptic feedback</string>
    <string name="pref_title_haptic_feedback">Haptic feedback</string>
    <string name="color_value">RED: %d, GREEN: %d, BLUE: %d</string>
    <string name="ir_value">{\"ir_val\":\"%s\"}</string>
    <string name="connected">Connected</string>
    <string name="btNotSupported">Bluetooth is not supported</string>
    <string name="action_load_color">Load color</string>
    <string name="title_activity_color">Load Color</string>
    <string name="saved">Saved color!</string>
    <string name="duplicate">Already saved this color</string>
    <string name="errorSave">Could not save color</string>
    <string name="longPressToSave">Long press to save color</string>
    <string name="rgbColor">RGB Color</string>
    <string name="rgbValues">rgb(%d, %d, %d)</string>
    <string name="colorMessage">{\"red\":%d,\"green\":%d,\"blue\":%d}</string>
    <string name="action_remove_all">Delete all</string>
    <string name="deleteAll">Delete all saved colors?</string>
    <string name="beatsMessage">{\"beats\":\"%b\"}</string>
    <string name="delayMessage">{\"delay\":%d}</string>
    <string name="disconnected">Disconnected</string>
    <string name="reconnecting">Trying to reconnect</string>
    <string name="ok">YES</string>
    <string name="title_location_permission">Allow location access?</string>
    <string name="text_location_permission">Location access is needed to scan for bluetooth devices.</string>
    <string name="discovering">Discovering devices, please wait.</string>
    <string name="defaultMAC">AA:AA:AA:AA:AA:AA</string>
    <string name="cancel">CANCEL</string>
    <string name="title_delay">Effect delay</string>
    <string name="delay_instruction">Try to stay under 500 ms to keep it smooth.</string>
    <string name="notPairedConnected">Device is not paired or connected.</string>
</resources>
